# quad

./: .gitignore  CONTEXT.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json
.github/: MACOS_SIGNING.md
.github/workflows/: build.yml
docs/adr/: 0001-tauri-rust-engine.md  0002-pure-layout-shell.md  0003-hotkey-spec-grammar-seam.md  0004-defer-ipc-codegen.md  0005-mission-control-task-view.md
legacy-dotnet/: Program.cs  WinRect.csproj  app.manifest  build.ps1
legacy-dotnet/Config/: Settings.cs
legacy-dotnet/Core/: Monitors.cs  WindowAction.cs  WindowManager.cs
legacy-dotnet/Input/: ActiveWindowTracker.cs  DragSnapManager.cs  HotkeyManager.cs  HotkeyParser.cs  WinEventHook.cs
legacy-dotnet/Interop/: NativeMethods.cs
legacy-dotnet/UI/: AppIcon.cs  Bridge.cs  MainWindow.cs  SnapOverlay.cs  TrayContext.cs
legacy-dotnet/Util/: Log.cs  WebAssets.cs  WebView2Runtime.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  app.rs  hotkeys.rs  ipc.rs  layout.rs  main.rs  native.rs  settings.rs  state.rs  tray.rs  update.rs  winmgr.rs
src-tauri/src/winmgr/: macos.rs  mod.rs  windows.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: HotkeyInput.tsx  LayoutPreview.tsx  ResizeBorders.tsx  Toggle.tsx  WindowControls.tsx  ui.tsx
web/src/components/aceternity/: BentoGrid.tsx  HoverBorderGradient.tsx  Spotlight.tsx  SpotlightCard.tsx  Tabs.tsx
web/src/lib/: actions.ts  bridge.ts  hotkeys.ts  types.ts  updateCheck.ts  updater.ts  utils.ts
web/src/screens/: About.tsx  Guide.tsx  Settings.tsx
