[package]
name = "quad"
version = "0.2.0"
description = "Rectangle-style window tiling for Windows"
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
] }

# macOS window I/O: Accessibility API (move/inspect windows) + CoreGraphics (display geometry,
# cursor) + AppKit (work area, frontmost app). Pure objc2 family so versions unify with Tauri's
# own objc2 deps — one CF/CG universe, no duplicate crates.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSDictionary",
    "NSValue",
    "NSGeometry",
    "NSEnumerator",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSScreen",
    "NSWorkspace",
    "NSGraphics",
] }
objc2-core-foundation = { version = "0.3", features = [
    "CFBase",
    "CFString",
    "CFDictionary",
    "CFArray",
    "CFNumber",
    "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", features = [
    "CGDirectDisplay",
    "CGError",
    "CGEvent",
    "CGEventSource",
] }
objc2-application-services = { version = "0.3", features = [
    "AXUIElement",
    "AXValue",
    "AXValueConstants",
    "AXAttributeConstants",
    "AXError",
    "HIServices",
    "libc",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
